# nghe-skills

./: .gitignore  README.md  cspell.json  my-skills.md  pyproject.toml  rules.md  tasks.md
.claude/skills/application-migration/: SKILL.md
.claude/skills/architecture-design-review/: SKILL.md
.claude/skills/backend-code-review/: SKILL.md
.claude/skills/backend-coding/: SKILL.md
.claude/skills/backend-design/: SKILL.md
.claude/skills/backend-design-review/: SKILL.md
.claude/skills/bug-analysis/: SKILL.md
.claude/skills/cobol-migration-analyzer/: SKILL.md
.claude/skills/code-quality-review/: SKILL.md
.claude/skills/code-refactoring/: SKILL.md
.claude/skills/code-security-review/: SKILL.md
.claude/skills/database-design/: SKILL.md
.claude/skills/database-migration/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/frontend-code-review/: SKILL.md
.claude/skills/frontend-coding/: SKILL.md
.claude/skills/frontend-design-review/: SKILL.md
.claude/skills/frontend-ui-ux-design/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/integration-testing/: SKILL.md
.claude/skills/jcl-migration-analyzer/: SKILL.md
.claude/skills/platform-migration/: SKILL.md
.claude/skills/pli-migration-analyzer/: SKILL.md
.claude/skills/project-planning/: SKILL.md
.claude/skills/requirement-review/: SKILL.md
.claude/skills/requirements-gathering/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/nghe_cli/: __init__.py  __main__.py  commands.py  config.py  github.py  system_utils.py  templates.py  ui.py
(+534 files in other folders)
